# pytorch-ssd

./: main.py  pyproject.toml  train_ssd.py
pytorch-ssd/: main.py
pytorch-ssd/vision/datasets/: generate_vocdata.py  voc_dataset.py
pytorch-ssd/vision/transforms/: transforms.py
pytorch-ssd/vision/utils/: box_utils.py
vision/ssd/: data_preprocessing.py
