[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling >= 1.11.0",
    "pip >= 22.0.0"
]

[project.scripts]
pytorchssd = "pytorch-ssd.main"


[project]
name            = "pytorch_ssd"
version         = "0.0.1"
description     = "Single Shot MultiBox Detector Implementation in Pytorch"
readme          = "README.md"
requires-python = ">=3.8"
license-files = { paths = ["LICENSE"] }


authors = [
    { name = "Facebook Research", email = "qfgaohao@github.com" },
    { name = "Two Six Technologies", email = "jennifer.csicsery-ronay@twosixtech.com" },
]

keywords = [
    "placeholder"
]

classifiers = [
    "Development Status :: 7 - Inactive",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pillow",
    "torch",
    "torchvision",
    "opencv-python",
    "numpy",
    "tensorboardX",
    "scikit_image",
    "matplotlib",
    "tqdm",
    "easydict",
    "opencv_python",
    "pandas",
]

[project.urls]
GitHub = "https://github.com/twosixlabs/pytorch-ssd"


[tool.hatch.build]
ignore-vcs   = false
reproducible = true
directory    = "dist"
include = [
    "pytorch-ssd/",
    "pytorch-ssd/LICENSE",
    "pyproject.toml",
    "pytorch-ssd/README.md"
]


[tool.hatch.metadata]
allow-direct-references = true